--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node proxy_server"
+    "start": "node index.js"
   },
   "keywords": [],
+  "engines": {
+    "node": "18.13.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
